--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.456.0",
-    "next": "15.0.3",
+    "next": "^15.0.3",
     "next-auth": "^4.24.10",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
