--- a/package.json
+++ b/package.json
@@ -24,14 +24,19 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "firebase": "^11.0.2",
     "lucide-react": "^0.456.0",
-    "next": "^15.0.3",
-    "next-auth": "^4.24.10",
+    "next": "^15.1.0",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.3",
+    "prisma": "^6.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
